# hermes-acp-bridge

./: .gitignore  AGENTS.md  PLAN.md  UX_FEEDBACK.md
docs/: hermes-workspace-introduction.md
plans/: knowledge-base.md
workspace-bridge/: README.md  pyproject.toml  requirements.txt
workspace-bridge/src/hermes_workspace_bridge/: _hermes_analyzer.py  acp_bridge.py  app.py  config.py  events.py  main.py  pipeline_manager.py  session_store.py  wiki_manager.py
workspace-bridge/tests/: test_acp_bridge.py  test_events.py  test_session_store.py  test_wiki_api.py  test_wiki_manager.py
workspace-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
workspace-ui/src/: App.tsx  styles.css  types.ts
workspace-ui/src/components/: AccountDetailPanel.tsx  AccountList.tsx  AccountModal.tsx  ActionCard.tsx  ActivityFeed.tsx  ActivityLogModal.tsx  ActivityRail.tsx  BinaryDocumentViewer.tsx  ChatTranscript.tsx  CommandPalette.tsx  Composer.tsx  KnowledgePage.tsx  MeddicTracker.tsx  PipelineBoard.tsx  PipelinePage.tsx  SessionSidebar.tsx
workspace-ui/src/lib/: api.ts  pipeline-api.ts
workspace-ui/src/types/: pipeline.ts
