[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-workspace-bridge"
version = "0.1.0"
description = "Browser bridge for Hermes ACP sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "pydantic>=2.8.0,<3",
  "agent-client-protocol>=0.9.0,<1.0",
  "hermes-agent[acp]>=0.9.0",
]

[project.scripts]
hermes-workspace-bridge = "hermes_workspace_bridge.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
